--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>Contact</h2>
     <p>For collaborations, custom case development, or speaking inquiries:</p>
     <p><strong>Email:</strong> <a href="mailto:venky@casecraftbyvenky.com">venky@casecraftbyvenky.com</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/venkysrambikal" target="_blank">Venky Srambikal</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vsrambikal/" target="_blank">Venky Srambikal</a></p>
   </section>
 
   <footer>
